cmake_minimum_required(VERSION 3.0.0)
project(testasync VERSION 0.1.0)
find_package(Threads REQUIRED)
include(CTest)
enable_testing()

add_executable(testasync main.cpp)
target_link_libraries(testasync Threads::Threads)
set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
include(CPack)
